--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,15 @@
         android:theme="@style/Theme.Easy"
         tools:targetApi="31">
         <activity
+            android:name=".activities.EmployerActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ClientActivity"
             android:exported="false" />
         <activity
             android:name=".activities.LoginRegisterActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
