--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //FirebaseAuth
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
+    //Firestore
     implementation 'com.google.firebase:firebase-firestore-ktx:24.7.0'
+    //Firebase.storage
     implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -71,14 +74,18 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
-    //Firebase
-    implementation 'com.google.firebase:firebase-auth:22.1.1'
 
     //Coroutines with firebase
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.1'
 
     //loading button
     implementation("com.github.leandroborgesferreira:loading-button-android:2.3.0")
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    //circular image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 }
